--- a/biblioshare-mobile/src/app/paginas/meus-livros/meus-livros.page.html
+++ b/biblioshare-mobile/src/app/paginas/meus-livros/meus-livros.page.html
@@ -1,30 +1,62 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button routerLink="/lista-desejos">
+        <ion-icon name="heart-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Meus livros</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="abrirAdicionar()">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <ion-button expand="block" color="success" routerLink="/busca">
-    Adicionar novo livro
-  </ion-button>
+<ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="carregarLivros($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
-  <ion-list>
+  <section class="ion-padding-top ion-padding-horizontal">
+    <ion-skeleton-text *ngIf="carregando && !livros.length" animated style="width: 60%; height: 30px"></ion-skeleton-text>
+  </section>
+
+  <ion-list *ngIf="livros.length">
     <ion-list-header>
       <ion-label>Inventário pessoal</ion-label>
     </ion-list-header>
 
-    <ion-item *ngFor="let livro of livrosExemplo">
+    <ion-item
+      button
+      detail
+      lines="full"
+      *ngFor="let livro of livros; trackBy: trackByLivro"
+      (click)="abrirDetalhes(livro)"
+    >
       <ion-label>
         <h2>{{ livro.titulo }}</h2>
-        <p>Modalidade: {{ livro.modalidade }}</p>
-        <ion-badge [color]="livro.disponibilidade === 'Disponível' ? 'success' : 'warning'">
-          {{ livro.disponibilidade }}
-        </ion-badge>
+        <p>{{ livro.autor || 'Autor não informado' }}</p>
+        <ion-chip *ngFor="let modalidade of livro.modalidades" color="light" outline="true" size="small">
+          {{ modalidade | titlecase }}
+        </ion-chip>
       </ion-label>
-      <ion-button slot="end" fill="clear" color="primary">
-        Detalhes
-      </ion-button>
+      <ion-badge slot="end" [color]="livro.disponivel ? 'success' : 'medium'">
+        {{ livro.disponivel ? 'Disponível' : 'Indisponível' }}
+      </ion-badge>
     </ion-item>
   </ion-list>
+
+  <div class="estado-vazio ion-text-center ion-padding" *ngIf="!carregando && !livros.length">
+    <ion-icon name="book-outline" size="large"></ion-icon>
+    <p>Você ainda não cadastrou nenhum livro.</p>
+    <ion-button color="primary" (click)="abrirAdicionar()">Adicionar livro</ion-button>
+  </div>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button color="primary" (click)="abrirAdicionar()">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
