--- a/biblioshare-web/templates/base.html
+++ b/biblioshare-web/templates/base.html
@@ -18,6 +18,12 @@
           <ul class="navbar-nav ms-auto">
             {% if user.is_authenticated %}
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'livros_web:meus-livros' %}">Meus livros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'livros_web:lista-desejos' %}">Lista de desejos</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'usuarios_web:perfil' %}">Perfil</a>
               </li>
               <li class="nav-item">
