Update URL routing in biblioshare-web to include a new home view and adjust health check endpoint. Modify base template to link to the new home view and enhance navigation options for authenticated users.

--- a/biblioshare-web/templates/base.html
+++ b/biblioshare-web/templates/base.html
@@ -10,13 +10,19 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'saude' %}">BiblioShare</a>
+        <a class="navbar-brand" href="{% url 'home' %}">BiblioShare</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'livros_web:vitrine' %}">Vitrine</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'livros_web:buscar' %}">Buscar</a>
+            </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'livros_web:meus-livros' %}">Meus livros</a>
               </li>
@@ -27,7 +33,10 @@
                 <a class="nav-link" href="{% url 'usuarios_web:perfil' %}">Perfil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'usuarios_web:sair' %}">Sair</a>
+                <form method="post" action="{% url 'usuarios_web:sair' %}" class="d-inline">
+                  {% csrf_token %}
+                  <button type="submit" class="nav-link btn btn-link px-0 text-decoration-none">Sair</button>
+                </form>
               </li>
             {% else %}
               <li class="nav-item">
