--- a/biblioshare-web/templates/base.html
+++ b/biblioshare-web/templates/base.html
@@ -20,6 +20,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'livros_web:vitrine' %}">Vitrine</a>
             </li>
+            </li class="nav-item">
+              <a class="nav-link" href="{% url 'transacoes_web:lista' %}">Transações</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'livros_web:buscar' %}">Buscar</a>
             </li>
