Implement side menu navigation in biblioshare-mobile with authentication checks. Add menu items for navigation and a logout option. Update styles for menu layout and active item highlighting. Modify various page headers to include a menu button for improved accessibility.

--- a/biblioshare-mobile/src/app/paginas/adicionar-livro/adicionar-livro.page.html
+++ b/biblioshare-mobile/src/app/paginas/adicionar-livro/adicionar-livro.page.html
@@ -94,12 +94,12 @@
       </ion-item>
     </ion-list>
 
-    <ion-padding>
+    <div class="ion-padding">
       <ion-button expand="block" type="submit" [disabled]="salvando">
         <ion-spinner slot="start" *ngIf="salvando" name="crescent"></ion-spinner>
         Salvar livro
       </ion-button>
-    </ion-padding>
+    </div>
   </form>
 </ion-content>
 
