--- a/biblioshare-mobile/src/app/app.component.html
+++ b/biblioshare-mobile/src/app/app.component.html
@@ -1,3 +1,47 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-split-pane contentId="main-content">
+    <ion-menu
+      *ngIf="estaAutenticado()"
+      menuId="main-menu"
+      contentId="main-content"
+      side="start"
+      type="overlay"
+    >
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Biblioshare</ion-title>
+        </ion-toolbar>
+      </ion-header>
+
+      <ion-content class="menu-content">
+        <ion-list lines="none">
+          <ion-menu-toggle auto-hide="true" *ngFor="let item of menuItens">
+            <ion-item
+              button
+              detail="false"
+              routerDirection="root"
+              [routerLink]="item.route"
+              routerLinkActive="menu-item--active"
+            >
+              <ion-icon slot="start" [name]="item.icon"></ion-icon>
+              <ion-label>{{ item.label }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+
+        <div class="menu-content__spacer"></div>
+
+        <ion-list lines="none">
+          <ion-menu-toggle auto-hide="true">
+            <ion-item button detail="false" (click)="sair()">
+              <ion-icon slot="start" name="log-out-outline"></ion-icon>
+              <ion-label>Sair</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+
+    <ion-router-outlet id="main-content"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
