--- a/biblioshare-mobile/src/app/paginas/meus-livros/meus-livros.page.html
+++ b/biblioshare-mobile/src/app/paginas/meus-livros/meus-livros.page.html
@@ -1,12 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button routerLink="/lista-desejos">
-        <ion-icon name="heart-outline" slot="icon-only"></ion-icon>
-      </ion-button>
+      <ion-menu-button menu="main-menu"></ion-menu-button>
     </ion-buttons>
     <ion-title>Meus livros</ion-title>
     <ion-buttons slot="end">
+      <ion-button routerLink="/lista-desejos">
+        <ion-icon name="heart-outline" slot="icon-only"></ion-icon>
+      </ion-button>
       <ion-button (click)="abrirAdicionar()">
         <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
