--- a/biblioshare-mobile/src/app/paginas/perfil/perfil.page.html
+++ b/biblioshare-mobile/src/app/paginas/perfil/perfil.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
     <ion-title>Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
